# viewcraft

./: .gitignore  LICENSE  README.md  out  output.txt  pyproject.toml
demo/: settings.py
demo_app/: admin.py  models.py  urls.py  views.py
demo_app/management/commands/: generate_test_posts.py
demo_app/migrations/: 0001_initial.py
demo_app/templates/demo_app/: list.html
tests/: conftest.py  factories.py  test_components.py  test_filter.py  test_pagination.py  test_search.py  test_utils.py
viewcraft/: __init__.py  apps.py  enums.py  exceptions.py  models.py  types.py  utils.py  views.py
viewcraft/components/: __init__.py  base_component.py  base_config.py  component.py  config.py  hooks.py
viewcraft/components/filter/: __init__.py  component.py  config.py
viewcraft/components/pagination/: __init__.py  component.py  config.py  exceptions.py
viewcraft/components/search/: __init__.py  component.py  config.py  exceptions.py  field.py  form.py  spec.py
viewcraft/templates/viewcraft/: pagination.html  search.html
viewcraft/templatetags/: search.py
