[project]
name = "viewcraft"
version = "0.1.0"
description = "A modern, type-safe approach to composable Django class-based views"
readme = "README.md"
authors = [
    { name = "Brennan Draves", email = "dravesbrennan@gmail.com" }
]
dependencies = [
    "django>=3.2",
    "typing-extensions>=4.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "django-stubs>=4.2.0",
    "ruff>=0.1.0",
    "factory-boy>=3.3.0",    # For test factories
    "faker>=22.0.0",         # Used by both factory-boy and our management command
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
]

[project.urls]
Homepage = "https://github.com/brennandraves/viewcraft"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["viewcraft"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
# Exclude manage.py, demo/, and demo_app/.
exclude = [
    "demo/",
    "demo_app/",
    "manage.py",
]
plugins = ["mypy_django_plugin.main"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "*/migrations/*.py",
    "demo/",
    "demo_app/",
    "manage.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "D",  # pydocstring
]
ignore = ["D203", "D212"]  # Ignore some docstring conflicts

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]  # D104: Missing docstring in public package, F401: Unused import

[tool.django-stubs]
django_settings_module = "demo.settings"
strict_settings = true
