[project]
name = "viewcraft"
version = "0.1.0"
description = "A modern, type-safe approach to composable Django class-based views"
authors = [
    { name = "Brennan Draves", email = "dravesbrennan@gmail.com" }
]
dependencies = [
    "typing-extensions>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-sugar>=0.90",
    "Django>=4.0.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/brennandraves/viewcraft"

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    "tests/"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
]
ignore = ["D203", "D212"]  # Ignore some docstring conflicts

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]  # D104: Missing docstring in public package, F401: Unused import
